efA - 2200489/antlr_gen/MOCParser.py
# Generated from MOC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MOCParser ( Parser ):

    grammarFileName = "MOC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'double'", "'void'", "';'", 
                     "','", "'='", "'['", "']'", "'{'", "'}'", "'[]'", "'('", 
                     "')'", "'if'", "'else'", "'while'", "'for'", "'return'", 
                     "'writes'", "'write'", "'writec'", "'writev'", "'read'", 
                     "'readc'", "'reads'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'*'", "'/'", 
                     "'%'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "INT", "DOUBLE", "STRING", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_varType = 1
    RULE_type = 2
    RULE_declaration = 3
    RULE_variableDeclList = 4
    RULE_variableDecl = 5
    RULE_functionDecl = 6
    RULE_functionDef = 7
    RULE_paramList = 8
    RULE_paramDecl = 9
    RULE_param = 10
    RULE_block = 11
    RULE_statement = 12
    RULE_assignment = 13
    RULE_functionCall = 14
    RULE_argumentList = 15
    RULE_condition = 16
    RULE_relop = 17
    RULE_expression = 18
    RULE_cast = 19

    ruleNames =  [ "program", "varType", "type", "declaration", "variableDeclList", 
                   "variableDecl", "functionDecl", "functionDef", "paramList", 
                   "paramDecl", "param", "block", "statement", "assignment", 
                   "functionCall", "argumentList", "condition", "relop", 
                   "expression", "cast" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    ID=40
    INT=41
    DOUBLE=42
    STRING=43
    WS=44
    COMMENT=45
    LINE_COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MOCParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MOCParser.DeclarationContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(MOCParser.FunctionDeclContext,i)


        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(MOCParser.FunctionDefContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MOCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 43
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 40
                    self.declaration()
                    pass

                elif la_ == 2:
                    self.state = 41
                    self.functionDecl()
                    pass

                elif la_ == 3:
                    self.state = 42
                    self.functionDef()
                    pass


                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(MOCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MOCParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)




    def varType(self):

        localctx = MOCParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(MOCParser.VarTypeContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = MOCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.varType()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(MOCParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(MOCParser.VarTypeContext,0)


        def variableDeclList(self):
            return self.getTypedRuleContext(MOCParser.VariableDeclListContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = MOCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.varType()
            self.state = 57
            self.variableDeclList()
            self.state = 58
            self.match(MOCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(MOCParser.VariableDeclContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_variableDeclList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclList" ):
                listener.enterVariableDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclList" ):
                listener.exitVariableDeclList(self)




    def variableDeclList(self):

        localctx = MOCParser.VariableDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.variableDecl()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 61
                self.match(MOCParser.T__4)
                self.state = 62
                self.variableDecl()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MOCParser.RULE_variableDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InitDeclContext(VariableDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.VariableDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)
        def expression(self):
            return self.getTypedRuleContext(MOCParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDecl" ):
                listener.enterInitDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDecl" ):
                listener.exitInitDecl(self)


    class ArrayInitContext(VariableDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.VariableDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MOCParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInit" ):
                listener.enterArrayInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInit" ):
                listener.exitArrayInit(self)


    class SimpleDeclContext(VariableDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.VariableDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleDecl" ):
                listener.enterSimpleDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleDecl" ):
                listener.exitSimpleDecl(self)


    class ArrayDeclContext(VariableDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.VariableDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)
        def INT(self):
            return self.getToken(MOCParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDecl" ):
                listener.enterArrayDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDecl" ):
                listener.exitArrayDecl(self)


    class ArrayInitFromCallContext(VariableDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.VariableDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)
        def functionCall(self):
            return self.getTypedRuleContext(MOCParser.FunctionCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitFromCall" ):
                listener.enterArrayInitFromCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitFromCall" ):
                listener.exitArrayInitFromCall(self)



    def variableDecl(self):

        localctx = MOCParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = MOCParser.SimpleDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(MOCParser.ID)
                pass

            elif la_ == 2:
                localctx = MOCParser.InitDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(MOCParser.ID)
                self.state = 70
                self.match(MOCParser.T__5)
                self.state = 71
                self.expression(0)
                pass

            elif la_ == 3:
                localctx = MOCParser.ArrayDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(MOCParser.ID)
                self.state = 73
                self.match(MOCParser.T__6)
                self.state = 74
                self.match(MOCParser.INT)
                self.state = 75
                self.match(MOCParser.T__7)
                pass

            elif la_ == 4:
                localctx = MOCParser.ArrayInitContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.match(MOCParser.ID)
                self.state = 77
                self.match(MOCParser.T__5)
                self.state = 78
                self.match(MOCParser.T__8)
                self.state = 79
                self.expression(0)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 80
                    self.match(MOCParser.T__4)
                    self.state = 81
                    self.expression(0)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.match(MOCParser.T__9)
                pass

            elif la_ == 5:
                localctx = MOCParser.ArrayInitFromCallContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(MOCParser.ID)
                self.state = 90
                self.match(MOCParser.T__10)
                self.state = 91
                self.match(MOCParser.T__5)
                self.state = 92
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MOCParser.TypeContext,0)


        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(MOCParser.ParamListContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = MOCParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.type_()
            self.state = 96
            self.match(MOCParser.ID)
            self.state = 97
            self.match(MOCParser.T__11)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 98
                self.paramList()


            self.state = 101
            self.match(MOCParser.T__12)
            self.state = 102
            self.match(MOCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MOCParser.TypeContext,0)


        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(MOCParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(MOCParser.ParamListContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)




    def functionDef(self):

        localctx = MOCParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.type_()
            self.state = 105
            self.match(MOCParser.ID)
            self.state = 106
            self.match(MOCParser.T__11)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 107
                self.paramList()


            self.state = 110
            self.match(MOCParser.T__12)
            self.state = 111
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.ParamDeclContext)
            else:
                return self.getTypedRuleContext(MOCParser.ParamDeclContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = MOCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.paramDecl()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 114
                    self.match(MOCParser.T__4)
                    self.state = 115
                    self.paramDecl()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MOCParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MOCParser.TypeContext,0)


        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def getRuleIndex(self):
            return MOCParser.RULE_paramDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDecl" ):
                listener.enterParamDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDecl" ):
                listener.exitParamDecl(self)




    def paramDecl(self):

        localctx = MOCParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.type_()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 125
                self.match(MOCParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MOCParser.TypeContext,0)


        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def getRuleIndex(self):
            return MOCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = MOCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.type_()
            self.state = 129
            self.match(MOCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MOCParser.StatementContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = MOCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MOCParser.T__8)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099578687494) != 0):
                self.state = 132
                self.statement()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(MOCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MOCParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(MOCParser.AssignmentContext,i)

        def condition(self):
            return self.getTypedRuleContext(MOCParser.ConditionContext,0)

        def block(self):
            return self.getTypedRuleContext(MOCParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)


    class CallStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCall(self):
            return self.getTypedRuleContext(MOCParser.FunctionCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallStmt" ):
                listener.enterCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallStmt" ):
                listener.exitCallStmt(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(MOCParser.ConditionContext,0)

        def block(self):
            return self.getTypedRuleContext(MOCParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)


    class WritecStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MOCParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWritecStmt" ):
                listener.enterWritecStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWritecStmt" ):
                listener.exitWritecStmt(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(MOCParser.ConditionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.BlockContext)
            else:
                return self.getTypedRuleContext(MOCParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)


    class WritevStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MOCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MOCParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWritevStmt" ):
                listener.enterWritevStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWritevStmt" ):
                listener.exitWritevStmt(self)


